added referencees to exposure and vulnerability data

--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -28,6 +28,10 @@
     "\n",
     "Global Seismic Data: https://www.globalquakemodel.org/product/global-seismic-hazard-map\n",
     "\n",
+    "Global Earthquake Exposure Model (Data for exposure model): https://github.com/gem/global_exposure_model\n",
+    "\n",
+    "Global Earthquake Vulnerability Model (Data for vulnerability model): https://github.com/gem/global_vulnerability_model/\n",
+    "\n",
     "Japanese Municipal Bonds (quarterly): https://needs.nikkei.co.jp/services/jsprice/#sample\n",
     "\n",
     "Japanese Municipal Bonds (daily): https://www.mcnnns77.net/market-data"
